@@ -10,6 +10,18 @@
 	<extension point="xbmc.python.script" library="default.py">
 		<provides>executable</provides>
 	</extension>
+	<extension point="kodi.context.item">
+		<menu id="kodi.core.manage">
+			<item library="context.py">
+				<label>32410</label>
+				<visible>!Skin.HasSetting(disablecontext:script.artwork.beef) + [StringCompare(ListItem.DBTYPE, movie) | StringCompare(ListItem.DBTYPE, set) | StringCompare(ListItem.DBTYPE, tvshow)]</visible>
+			</item>
+			<item library="context_gui.py">
+				<label>32411</label>
+				<visible>!Skin.HasSetting(disablecontext:script.artwork.beef) + [StringCompare(ListItem.DBTYPE, movie) | StringCompare(ListItem.DBTYPE, set) | StringCompare(ListItem.DBTYPE, tvshow) | StringCompare(ListItem.DBTYPE, episode)]</visible>
+			</item>
+		</menu>
+	</extension>
 	<extension point="xbmc.service" start="login" library="service.py" />
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en">Automatically adds extra artwork for your media.</summary>
